--- a/styles/components/featured.css
+++ b/styles/components/featured.css
@@ -31,13 +31,13 @@
   margin: 1rem 0;
 }
 
-.featured__info--container {
+.featured__info-container {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
 }
 
-.featured__info--container div {
+.featured__info-container div {
   flex: 1;
   min-width: 250px;
 }
@@ -48,7 +48,7 @@
   margin-bottom: 0.25em;
 }
 
-.featured__tech--stack {
+.featured__tech-stack {
   padding: 0;
   list-style: none;
 }
@@ -90,7 +90,7 @@
 
 /* sm */
 @media (min-width: 640px) {
-  .featured__img--wrapper {
+  .featured__img-wrapper {
     margin: 0 auto;
   }
 
