--- a/styles/utils.css
+++ b/styles/utils.css
@@ -34,7 +34,7 @@
 }
 
 .btn {
-  color: var(--clr-light);
+  color: #fcfcfd;
   font-weight: 500;
   text-decoration: none;
   background-color: var(--clr-primary);
