--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -12,6 +12,18 @@
   display: none;
 }
 
+.header__sun .moon-icon {
+  display: none;
+}
+
+.dark .header__sun .moon-icon {
+  display: block;
+}
+
+.dark .header__sun .sun-icon {
+  display: none;
+}
+
 .header__bars {
   color: var(--clr-dark);
   width: var(--size-2xl);
