--- a/styles/utils.css
+++ b/styles/utils.css
@@ -34,13 +34,17 @@
 }
 
 .btn {
-  color: #fcfcfd;
+  color: var(--clr-light);
   font-weight: 500;
   text-decoration: none;
   background-color: var(--clr-primary);
   padding: 0.5rem 1rem;
   border-radius: 8px;
   transition: translate 0.3s, box-shadow 0.3s;
+}
+
+.dark .btn {
+  color: var(--clr-dark);
 }
 
 .btn:hover {
