--- a/styles/utils.css
+++ b/styles/utils.css
@@ -1,38 +1,3 @@
-.pallette {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: flex;
-  border-radius: 8px;
-  width: 300px;
-}
-
-.pallette__color {
-  display: none;
-  width: 50px;
-  height: 50px;
-  content: "";
-}
-
-.color1 {
-  background-color: var(--clr-primary);
-}
-.color2 {
-  background-color: var(--clr-secondary);
-}
-.color3 {
-  background-color: var(--clr-accent);
-}
-.color4 {
-  background-color: var(--clr-neutral300);
-}
-.color5 {
-  background-color: var(--clr-neutral500);
-}
-.color6 {
-  background-color: var(--clr-neutral700);
-}
-
 .btn {
   color: var(--clr-light);
   font-weight: 500;
@@ -40,6 +5,7 @@
   background-color: var(--clr-primary);
   padding: 0.5rem 1rem;
   border-radius: 8px;
+  box-shadow: 0 4px var(--clr-neutral300);
   transition: translate 0.3s, box-shadow 0.3s;
 }
 
@@ -48,15 +14,14 @@
 }
 
 .btn:hover {
-  box-shadow: 0 10px 20px rgba(185, 28, 28, 0.5),
+  box-shadow: 0 4px var(--clr-neutral300), 0 10px 20px rgba(185, 28, 28, 0.5),
     0 6px 6px rgba(185, 28, 28, 0.5);
-  transform: translateY(-3px);
 }
 
 .btn:active {
-  box-shadow: 0 5px 10px rgba(185, 28, 28, 0.5),
+  box-shadow: 0 2px var(--clr-neutral300), 0 5px 10px rgba(185, 28, 28, 0.5),
     0 3px 3px rgba(185, 28, 28, 0.5);
-  transform: translateY(0px);
+  transform: translateY(2px);
 }
 
 .container {
